# sem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  JSON_SEMANTIC_DIFF_SPEC.md  README.md  SKILL.md  package-lock.json  package.json  server.json
.github/workflows/: changelog.yml  ci.yml  docs-pages.yml  pr-entity-diff.yml  publish-skill.yml  release.yml  semver.yml
.quiver/: review-sessions.sqlite3
Formula/: sem.rb
action/: README.md  action.yml
agent-skill/: README.md  SKILL.md  install.mjs  package.json
agent-skill/badge/: sem-activity.py  sem-live.py  statusline-sem.py
agent-skill/guard/: sem-guard.py
crates/: Cargo.toml  README.md
crates/sem-api/src/: main.rs
crates/sem-cli/: Cargo.toml
crates/sem-cli/src/: cache.rs  main.rs  progress.rs  telemetry.rs
crates/sem-cli/src/commands/: blame.rs  changelog.rs  cloud.rs  common.rs  consent.rs  context.rs  diff.rs  entities.rs  files.rs  graph.rs  hook.rs  impact.rs  log.rs  mod.rs  orient.rs  repos.rs  review.rs  setup.rs  sidecar.rs  verify.rs
crates/sem-cli/src/formatters/: json.rs  markdown.rs  mod.rs  plain.rs  terminal.rs
crates/sem-cli/tests/: accessor_cli.rs  diff_file_compare.rs  diff_patch.rs  entities_cli.rs  impact_direct_deps.rs  log_cli.rs  verify_cli.rs
crates/sem-cloud-client/: Cargo.toml
crates/sem-cloud-client/src/: lib.rs
crates/sem-core/: Cargo.toml
crates/sem-core/benches/: svelte_parse.rs
crates/sem-core/src/: lib.rs
crates/sem-core/src/format/: json.rs
crates/sem-core/src/git/: bridge.rs  types.rs
crates/sem-core/src/model/: change.rs  entity.rs  identity.rs
crates/sem-core/src/parser/: changelog.rs  context.rs  differ.rs  graph.rs  hotspot.rs  import_resolution.rs  log.rs  mod.rs  plugin.rs  registry.rs  review.rs  scope_resolve.rs  signature.rs  verify.rs
crates/sem-core/src/parser/plugins/: csv_plugin.rs  fallback.rs  json.rs  markdown.rs  mod.rs  svelte.rs  toml_plugin.rs  yaml.rs
crates/sem-core/src/parser/plugins/code/: entity_extractor.rs  languages.rs  mod.rs
crates/sem-core/src/utils/: date.rs  files.rs  hash.rs  mod.rs
crates/sem-core/tests/: d_smoke.rs  graph_accuracy.rs  scope_resolve_bench.rs  verify_bench.rs
crates/sem-mcp/: Cargo.toml
crates/sem-mcp/src/: cache.rs  lib.rs  main.rs  render.rs  server.rs  sidecar.rs  tools.rs
crates/sem-plugin/: Cargo.toml
crates/sem-plugin/schema/: sem_entity.json
crates/sem-plugin/src/: lib.rs
crates/sem-plugin/test-harness/src/: main.rs
docs/: agents.html  attention-architecture.md  benchmarks.html  changelog.html  cloud-consent.html  details.html  first-principles.html  index.html  llms.txt
site/public/: llms.txt
site/src/app/: page.tsx
skills/sem/: SKILL.md
src/cli/commands/: blame.ts  diff.ts  status.ts  validate.ts
src/cli/formatters/: plain.ts
src/git/: bridge.ts  diff-reader.ts
src/model/: change.ts  entity-type.ts  entity.ts
src/parser/: differ.ts  registry.ts
src/parser/plugins/code/: entity-extractor.ts  grammar-loader.ts  index.ts  languages.ts
src/parser/plugins/json/: index.ts
src/parser/plugins/markdown/: index.ts
src/storage/: database.ts  schema.ts
src/utils/: mime.ts
test/: code-parser.test.ts
tmp/: after.json  after.py  before.json  before.py
