[package]
name = "sem-core"
version = "0.2.0"
edition = "2021"

[dependencies]
git2 = "0.19"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
sha2 = "0.10"
regex = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3.24.0"
